objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <description>Marketo lead scoring</description>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Used for Marketo to import Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technology/Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-level</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>Senior Director</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Owner/Founder</fullName>
                </value>
                <value>
                    <fullName>Board member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>MDR 10%</fullName>
                </value>
                <value>
                    <fullName>MDR 20%</fullName>
                </value>
                <value>
                    <fullName>SQL First 30%</fullName>
                </value>
                <value>
                    <fullName>Active Opp 35%+</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Slow Opp Recycle</fullName>
                </value>
                <value>
                    <fullName>Recycled</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Lost Opp Recycled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_Acquisition__c</fullName>
        <label>List Acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LeadGenius</fullName>
                </value>
                <value>
                    <fullName>Datanyze</fullName>
                </value>
                <value>
                    <fullName>Sales Navigator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Valid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the email is a non-valid email</description>
        <inlineHelpText>Check this box if the email is a non-valid email</inlineHelpText>
        <label>Non-Valid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Marketing_Nurturing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field help SDRs Identify the contacts they would like to put under Marketing nurturing.</description>
        <label>On Marketing Nurturing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Level__c</fullName>
        <label>Resource Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_at_Account__c</fullName>
        <description>Enables the user to detail whether a contact is still working at the account for which they are listed.</description>
        <inlineHelpText>Contacts seldom stay ay one company for life.  In order to keep contact information up-ro-date, use this cell to outline the contacts status at the company; still present, left company, retired.</inlineHelpText>
        <label>Status at Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                    <default>true</default>
                    <label>Present</label>
                </value>
                <value>
                    <fullName>Present - Maternity Leave</fullName>
                </value>
                <value>
                    <fullName>Left Company</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unsure - Email Bounce / Calls Unanswered</fullName>
                </value>
                <value>
                    <fullName>Currently in Communication</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Key contact</fullName>
                </value>
                <value>
                    <fullName>Terminated Customer</fullName>
                </value>
                <value>
                    <fullName>Out Of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this box if this is a Business Contact for communicating Business issues from Support such as Issue Notification.  
This is not the same as the main contact for Feed problems - that is covered within the Feed template.</description>
        <inlineHelpText>Please check this box if this is a Business Contact for communicating Business issues from Support such as Issue Notification.  
This is not the same as the main contact for Feed problems - that is covered within the Feed template.</inlineHelpText>
        <label>Support Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_for_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Support Team will tick this checkbox for the contacts that should be notified whenever {rr} has maintenance.</description>
        <inlineHelpText>Support Team will tick this checkbox for the contacts that should be notified whenever {rr} has maintenance.</inlineHelpText>
        <label>Technical Contact for Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>For Ads contacts</description>
        <inlineHelpText>If this is an Advertising Contact, please indicate the type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacation_Allotment_2016_in_Hours__c</fullName>
        <description>Used for EMEA vacation allotment tracking.</description>
        <inlineHelpText>Used for EMEA vacation allotment tracking.</inlineHelpText>
        <label>EMEA Vacation Allotment 2016 (in Hours)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Created for Marketo Update/Upgrade in October 2016</description>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <description>Created for the Marketo Upgrade/Update in October 2016.</description>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Created for Marketo Update/Upgrade in October 2016</description>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <description>Created for Marketo Upgrade/Update October 2016.</description>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <description>Created for Marketo Upgrade/Update October 2016.</description>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <description>Created for Marketo Upgrade/Update October 2016</description>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <description>Created for Marketo Update/Upgrade October 2016</description>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <description>Created for Marketo Upgrade/Update 2016</description>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <description>Created for Marketo Upgrade/Update in October 2016.</description>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <description>Created for Upgrade/Update of Marketo October 2016</description>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>New field created for Marketo Upgrade/change in October 2016</description>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <description>Created for the Marketo Upgrade/Update in October 2016.</description>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xuid__c</fullName>
        <label>xuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Sales and Customer Contacts</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSA_Resource</fullName>
        <active>true</active>
        <description>Used for PSA Resources</description>
        <label>PSA Resource</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agency_Brand</fullName>
        <active>true</active>
        <description>If Type is agency, Brand needs to be filled out</description>
        <errorConditionFormula>AND( ISPICKVAL(Type__c,&quot;Agency&quot;), ISBLANK(Brand__c))</errorConditionFormula>
        <errorDisplayField>Brand__c</errorDisplayField>
        <errorMessage>Brand needs to be filled out for an Agency type Contact</errorMessage>
    </validationRules>
</CustomObject>